<resources>
    <string name="app_name">BloodBank</string>
    <string name="manager_club">CLB Ban Mai Xanh</string>
    <string name="admin">Admin</string>
    <string name="member">Member</string>
    <string name="guest">Guest</string>
    <string name="cancel">Thoát</string>
    <string name="ok">Ok</string>
    <string name="facebook_app_id">1807721506157321</string>
    <string name="fb_login_protocol_scheme">fb1807721506157321</string>
    <string name="toolbar_search_member_group">Tìm kiếm nhóm máu thành viên</string>
    <string name="title_join_group">Xác thực tham gia CLB</string>
    <string name="hint_edt_join_club">Mã xác thực</string>
    <string name="next">Tiếp theo</string>
    <string name="skip">Bỏ qua</string>
    <string name="start">Hoàn Thành</string>
    <string name="slide_1_title">Quản lý thành viên!</string>
    <string name="slide_1_desc">Giúp người quản lý có thể quản lý và tương tác thành viên một cách hiệu quả!</string>
    <string name="slide_2_title">Tìm kiếm nhóm máu</string>
    <string name="slide_2_desc">Giúp tìm kiếm nhóm máu mà mình cần một cách nhanh chóng</string>
    <string name="slide_3_title">Quản lý lịch sử hiến máu</string>
    <string name="slide_3_desc">Giúp quản lý lịch sử một cách chi tiết! </string>
    <string name="slide_4_title"> Gửi thông báo </string>
    <string name="slide_4_desc">Dễ dành gửi thông báo khi có người cần máu đến các thành viên sớm nhất</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="btn_login_facebook">Đăng nhập bằng Facebook</string>
    <string name="btn_login"> Đăng nhập</string>
    <string name="text_signup_or_login">Sign up or login with: </string>
    <string name="text_forgot_password">Quên mật khẩu ?</string>
    <string name="mobilenumber"> Mobile Number </string>
    <string name="text_already_have_account">Bạn chưa có tài khoản?</string>
    <string name="text_register">Đăng ký</string>
    <string name="text_register_user">Đăng ký tài khoản</string>
    <string name="description_title"> Thêm thông tin bản thân</string>
    <string name="fullname"> Họ và tên</string>
    <string name="hint_phone"> Nhập số điện thoại</string>
    <string name="date_of_birth"> Nhập ngày sinh</string>
    <string name="email"> Email</string>
    <string name="email_forgot"> Nhập địa chỉ email</string>
    <string name="btn_verify"> Xác thực gửi về email</string>
    <string name="password">Mật khẩu</string>
    <string name="confirm_password">Nhập lại mật khẩu</string>
    <string name="hint_time_donation"> Thời gian cho máu</string>
    <string name="hint_city">Thành Phố</string>
    <string name="hint_district"> Quận/Huyện</string>
    <string name="hint_blood_group">Nhóm máu</string>
    <string name="hint_gender">Giới tính: </string>
    <string name="gender_male"> Nam</string>
    <string name="gender_female"> Nữ</string>
    <string name="btn_add_desription"> Thêm thông tin</string>
    <string name="btn_instruction">Hướng dẫn sử dụng</string>
    <string name="btn_introduction">Giới thiệu về app</string>
    <string name="nav_name"> Đặng Duy Hậu</string>
    <string name="position"> Người dùng</string>
    <string name="name_club"> CLB Ban Mai Xanh Đà Nẵng</string>
    <string name="time_post">15:30 - 10/01/2016</string>
    <string name="detail_post">Chiều nay có một số bệnh nhân đang bị sốt xuất huyết rất nặng đang cần gấp 2 đơn vị tiểu cầu máy nhóm máu O và nhóm A để điều trị , bạn nào giúp được ll với mình qua số 0905944950
Đợi tin từ mọi người
P/s Đồng cảm đơn giản là sẻ chia</string>
    <string name="count_register_donation_blood"> 10 người đăng ký</string>
    <string name="register"> Đăng ký</string>
    <string name="view_club">Xem chi tiết CLB</string>
    <string name="comment"> Bình luận</string>
    <string name="share"> Chia sẻ</string>
    <string name="donateOnOne">Từng hiến máu ít nhất một lần!</string>
    <string name="eligibleDonate">Đủ điều kiện hiến máu!</string>
    <string name="search">Tìm kiếm</string>
    <string name="list_search">Danh sách tìm kiếm</string>
    <string name="instruction_feature">Hướng dẫn sử dụng</string>
    <string name="club_description_club">Mục tiêu CLB:Ở đâu có nạn nhân cần tiếp máu ở đó có những con người tình nguyện.</string>
    <string name="count_member_club"> Số lượng thành viên: 1024</string>
    <string name="address_club"> Địa chỉ: Cẩm Lệ, Đà Nẵng</string>
    <string name="facebook_club"> Facebook: CLB Ban Mai Xanh</string>
    <string name="filter">Bộ lọc</string>
    <string name="hint_count_member_club">Số lượng thành viên</string>
    <string name="btn_call_admin">Gọi điện cho admin</string>
    <string name="btn_call">Gọi điện</string>
    <string name="btn_sms">Nhắn tin</string>
    <string name="count_donate_blood">12 lần hiến máu</string>
    <string name="phone">01228524778</string>
    <string name="time_donation">Ngoài giờ hành chính</string>
    <string name="address">Hòa Khánh, Đà Nẵng</string>
    <string name="btn_edit_profile">Chỉnh sửa tài khoản</string>
    <string name="count_donation_blood"> 12 lần hiến máu </string>
    <string name="toobar_title_profile">Thay đổi thông tin tài khoản</string>
    <string name="toobar_title_comment">Xem bình luận</string>
    <string name="toobar_name_clb">CLB Ban Mai Xanh</string>
    <string name="list_member_club">Danh sách thành viên CLB</string>
    <string name="member_register"> Thành viên đăng ký</string>
    <string name="post_new_discuss"> Đăng bài mới</string>
    <string name="hint_edt_post_new_discuss"> Nhập nội dung vào</string>
    <string name="btn_done"> OK</string>
    <string name="description_comment"> ad ơi mình là nhóm máu A, có gì liên hệ mình nhé</string>
    <string name="hint_edt_comment">Nhập nội dung bình luận</string>
    <string name="history_date">22/01/2016</string>
    <string name="history_location_hospital">Tại: Bệnh viện Đa Khoa Đà Nẵng</string>
    <string name="history_description">Bạn đã hiến 1 đơn vị tiểu cầu máu loại B+</string>
    <string name="quality">Số lượng đơn vị hiến</string>
    <string name="title_profile_search"> Thông tin chi tiết</string>
    <string name="create_history"> Tạo lịch sử hiến máu</string>
    <string-array name="name_hospital">
        <item>Bệnh viện Đa khoa Hoàn Mỹ Đà Nẵng</item>
        <item>Bệnh viện Đa khoa Bình Dân</item>
        <item>Bệnh viện Y học cổ truyền Đà Nẵng</item>
        <item>Bệnh Viện Điều Dưỡng Phục Hồi Chức Năng</item>
        <item>Bệnh Viện Da Liễu</item>
        <item>Bệnh viện Mắt Đà Nẵng</item>
        <item>Bệnh Viện Đa Khoa Đà Nẵng</item>
        <item>Bệnh viện Giao thông vận tải Đà Nẵng</item>
        <item>Bệnh viện Phụ Sản – Nhi Đà Nẵng</item>
        <item>Bệnh viện C Đà Nẵng</item>
        <item>Bệnh viện chỉnh hình – PHCN ĐN</item>
        <item>Bệnh viện đa khoa Tâm trí Đà Nẵng</item>
        <item>Bệnh viện đa khoa Vĩnh Toàn</item>
        <item>Bệnh viện đa khoa Gia Đình</item>
    </string-array>
    <string name="units_donation">Đơn vị hiến</string>
    <string name="statistical_text"> THỐNG KÊ THEO TỪNG THÁNG</string>
    <string name="radio_gender_all">Tất cả</string>
    <string name="hint_have_gender">Giới tính bạn cần:</string>
    <string name="hint_time_day">Thời gian cần</string>
    <string name="text_infomation_other">Thông tin khác(nếu có)</string>
    <string name="btn_done_list_register_blood">Hoàn thành đăng ký</string>
    <string name="text_list_member_register">THÀNH VIÊN ĐĂNG KÝ</string>
    <string name="text_filter_search">Bộ lọc tìm kiếm</string>
    <string name="text_delete_all">Xóa tât cả</string>
    <string name="text_add_new_discuss">THÊM BÀI ĐĂNG MỚI</string>
    <string name="home">Trang chủ</string>
    <string name="login_success">" Đăng nhập thành công"</string>
    <string name="register_account">Đăng ký tài khoản</string>
    <string-array name="navDrawerItemsUser">
        <item>Trang chủ</item>
        <item>Tìm kiếm nhóm máu</item>
        <item>Tìm kiếm câu lạc bộ</item>
        <item>Tài khoản</item>
        <item>Hướng dẫn sử dụng</item>
        <item>Đăng xuất</item>
    </string-array>
    <string-array name="navDrawerItemsMember">
        <item>Trang chủ</item>
        <item>Tìm kiếm nhóm máu</item>
        <item>Tìm kiếm câu lạc bộ</item>
        <item>CLB đã tham gia</item>
        <item>Tài khoản</item>
        <item>Lịch sử hiến máu</item>
        <item>Hướng dẫn sử dụng</item>
        <item>Đăng xuất</item>
    </string-array>
    <string-array name="navDrawerItemsAdmin">
        <item>Trang chủ</item>
        <item>Tìm kiếm nhóm máu</item>
        <item>Tìm kiếm câu lạc bộ</item>
        <item>Quản lý câu lạc bộ</item>
        <item>Tài khoản</item>
        <item>Lịch sử hiến máu</item>
        <item>Thống kê</item>
        <item>Hướng dẫn sử dụng</item>
        <item>Đăng xuất</item>
    </string-array>
    <string-array name="array_item_profile">
        <item>12 lần hiến máu</item>
        <item>+840122852147</item>
        <item>saccerwin101@gmail.com</item>
        <item>Hòa Khánh, Đà Nẵng</item>
        <item>20/12/1995</item>
        <item>Nam</item>
    </string-array>
    <string-array name="count_member">
        <item>Không giới hạn</item>
        <item>Từ 10 - 100 thành viên</item>
        <item>Từ 100 - 500 thành viên</item>
        <item>Từ 500 - 1000 thành viên</item>
        <item>Trên 1000 thành viên</item>
    </string-array>
    <string-array name="units_donation_blood_items">
        <item>Máu toàn phần</item>
        <item>Tiểu cầu máu</item>
    </string-array>
    <string-array name="array_time_day">
        <item>Sáng nay</item>
        <item>Chiều nay</item>
        <item>Tối nay</item>
        <item>Hôm nay</item>
        <item>Ngay bây giờ</item>
    </string-array>
    <string-array name="blood_group">
        <item>A</item>
        <item>B</item>
        <item>O</item>
        <item>AB</item>
    </string-array>
    <string-array name="district">
        <item>Huyện Hòa Vang</item>
        <item>Huyện Hoàng Sa</item>
        <item>Quận Cẩm Lệ</item>
        <item>Quận Hải Châu</item>
        <item>Quận Liên Chiểu</item>
        <item>Quận Ngũ Hành Sơn</item>
        <item>Quận Sơn Trà</item>
        <item>Quận Thanh Khê</item>
    </string-array>
    <string-array name="district_danang">
        <item>Huyện Hòa Vang</item>
        <item>Huyện Hoàng Sa</item>
        <item>Quận Cẩm Lệ</item>
        <item>Quận Hải Châu</item>
        <item>Quận Liên Chiểu</item>
        <item>Quận Ngũ Hành Sơn</item>
        <item>Quận Sơn Trà</item>
        <item>Quận Thanh Khê</item>
    </string-array>
    <string-array name="district_hanoi">
        <item>Huyện Ba Vì</item>
        <item>Huyện Chương Mỹ</item>
        <item>Huyện Đan Phượng</item>
        <item>Huyện Đông Anh</item>
        <item>Huyện Gia Lâm</item>
        <item>Huyện Hoài Đức</item>
        <item>Huyện Mê Linh</item>
        <item>Huyện Mỹ Đức</item>
        <item>Huyện Phú Xuyên</item>
        <item>Huyện Phúc Thọ</item>
        <item>Huyện Quốc Oai</item>
        <item>Huyện Sóc Sơn</item>
        <item>Huyện Thạch Thất</item>
        <item>Huyện Thanh Oai</item>
        <item>Huyện Thanh Trì</item>
        <item>Quận Ba Đình</item>
        <item>Quận Cầu Giấy</item>
        <item>Quận Đống Đa</item>
        <item>Quận Hà Đông</item>
        <item>Quận Hai Bà Trưng</item>
        <item>Quận Hoàn Kiếm</item>
        <item>Quận Hoàng Mai</item>
        <item>Quận Long Biên</item>
        <item>Quận Tây Hồ</item>
        <item>Quận Thanh Xuân</item>
        <item>Thị xã Sơn Tây</item>
    </string-array>
</resources>