<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/spinner_blood_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_10"
            android:hint="@string/hint_blood_group"
            app:met_floatingLabel="highlight"/>
        <com.rengwuxian.materialedittext.MaterialAutoCompleteTextView
            android:id="@+id/autocomplete_tv_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_city"
            android:maxLines="1"
            android:inputType="textCapWords"
            android:imeOptions="actionNext"
            android:layout_marginBottom="@dimen/padding_10"
            app:met_clearButton="true" />
        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/spinner_district"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_10"
            android:hint="@string/hint_district"
            app:met_floatingLabel="normal"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_5"
            android:text="@string/hint_have_gender"
            android:textSize="@dimen/text_size_15" />

        <RadioGroup
            android:gravity="center_horizontal"
            android:id="@+id/radio_group_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/radio_gender_all"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/RadioButtonMain"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/radio_gender_all" />

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/radio_male"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/RadioButtonMain"
                android:text="@string/gender_male" />

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/radio_female"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/RadioButtonMain"
                android:layout_weight="1"
                android:text="@string/gender_female" />
        </RadioGroup>

        <CheckBox
            android:layout_marginTop="@dimen/padding_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_10"
            android:id="@+id/checkboxDonationOnOneTime"
            android:text="@string/donateOnOne"/>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_10"
            android:id="@+id/checkboxEligibleDonation"
            android:text="@string/eligibleDonate"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:text="@string/search"
            android:id="@+id/btn_search"
            android:textColor="@color/colorWhite"
            android:background="@color/blue_app"
            android:layout_height="wrap_content" />


    </LinearLayout>

</ScrollView>
