<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/toolbar"/>

        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/spinner_blood_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_10"
            android:hint="@string/hint_blood_group"
            app:met_floatingLabel="highlight"/>
        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/spinner_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_10"
            android:hint="@string/hint_city"
            app:met_floatingLabel="normal"/>
        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/spinner_district"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_10"
            android:hint="@string/hint_district"
            app:met_floatingLabel="normal"/>

        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/spinner_time_donation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_10"
            android:hint="@string/hint_time_donation"
            app:met_floatingLabel="normal"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_10"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding_5"
                android:textSize="@dimen/text_size_15"
                android:text="@string/hint_gender"/>
            <RadioGroup
                android:id="@+id/radio_group_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">
                <RadioButton
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/gender_male"
                    android:backgroundTint="@color/bg_screen"
                    android:checked="true"
                    android:id="@+id/radio_male"/>

                <RadioButton
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/bg_screen"
                    android:text="@string/gender_female"
                    android:id="@+id/radio_female"
                    />
            </RadioGroup>

        </LinearLayout>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_10"
            android:id="@+id/checkboxDonationOnOneTime"
            android:text="@string/donateOnOne"/>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_10"
            android:id="@+id/checkboxEligibleDonation"
            android:text="@string/eligibleDonate"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:text="@string/search"
            android:id="@+id/btn_search"
            android:textColor="@color/colorWhite"
            android:background="@color/blue_app"
            android:layout_height="wrap_content" />
    </LinearLayout>
  </ScrollView>


