<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post_new_discuss"
        android:textSize="@dimen/text_size_20"
        android:background="@color/bg_screen"
        android:padding="@dimen/padding_10"
        android:textColor="@color/colorWhite"
        android:gravity="center_horizontal"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.rengwuxian.materialedittext.MaterialAutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hospital"
            android:ems="10"
            android:maxLines="3"
            app:met_floatingLabel="highlight"
            android:id="@+id/tv_auto_completed_name_hospital"/>
        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/hint_blood_group"
            app:met_floatingLabel="highlight"
            android:id="@id/spinner_blood_group"/>
        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/spinner_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_time_day"
            app:met_floatingLabel="highlight" />

        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/spinner_units_donation_blood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/units_donation"
            app:met_floatingLabel="highlight" />


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_quality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/quality"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_5"
            android:text="@string/hint_have_gender"
            android:textSize="@dimen/text_size_15" />

            <RadioGroup
                android:gravity="center_horizontal"
                android:id="@+id/radio_group_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radio_gender_all"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/RadioButtonMain"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/radio_gender_all" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radio_male"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/RadioButtonMain"
                    android:text="@string/gender_male" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radio_female"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/RadioButtonMain"
                    android:layout_weight="1"
                    android:text="@string/gender_female" />
            </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_5"
            android:text="@string/text_infomation_other"
            android:textSize="@dimen/text_size_15" />

        <EditText
            android:inputType="textMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="4"
            android:id="@+id/edt_infomation_other"
            android:scrollbars="vertical"
            android:gravity="top|start"
            android:layout_marginBottom="@dimen/padding_10"
            android:maxLines="3"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/padding_10"
            android:layout_marginStart="@dimen/padding_10"
            android:layout_marginEnd="@dimen/padding_10"
            android:layout_marginRight="@dimen/padding_10"
            android:weightSum="2">

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/btn_cancel"
                android:textColor="@color/colorWhite"
                android:background="@color/grey_500"
                android:layout_height="wrap_content"
                android:text="@string/cancel"/>

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="@color/colorWhite"
                android:background="@color/blue_600"
                android:layout_height="wrap_content"
                android:id="@+id/btn_done"
                android:text="@string/ok"/>

        </LinearLayout>
    </LinearLayout>
    </ScrollView>



</LinearLayout>
